--- a/pom.xml
+++ b/pom.xml
@@ -3,29 +3,40 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
+
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>3.0.6</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
-  
+
   <groupId>de.digitalcollections</groupId>
   <artifactId>cudami-external-service</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>cudami External APIs Service</name>
-  <description>REST-Webservice providing the public APIs for cudami Repository Server</description>
-  
+  <description>REST-Webservice providing the public APIs for cudami Repository
+    Server</description>
+
   <properties>
     <java.version>17</java.version>
   </properties>
-  
+
   <dependencies>
     <dependency>
       <groupId>io.micrometer</groupId>
       <artifactId>micrometer-registry-prometheus</artifactId>
       <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mycore.libmeta</groupId>
+      <artifactId>libmeta-mets</artifactId>
+      <version>0.8.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mycore.libmeta</groupId>
+      <artifactId>libmeta-mods</artifactId>
+      <version>0.8.0</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
