--- a/pom.xml
+++ b/pom.xml
@@ -39,12 +39,12 @@
     <dependency>
       <groupId>org.mycore.libmeta</groupId>
       <artifactId>libmeta-mets</artifactId>
-      <version>0.8.0</version>
+      <version>0.8.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.mycore.libmeta</groupId>
       <artifactId>libmeta-mods</artifactId>
-      <version>0.8.0</version>
+      <version>0.8.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
