--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 cudami:
   server:
-    url: http://localhost:9000
+    #url: http://localhost:9000
+    url: https://api-dev.digitale-sammlungen.de/cudami
 
 management:
   endpoints:
