--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,16 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
+      <groupId>org.mycore</groupId>
+      <artifactId>oaipmh-dataprovider</artifactId>
+      <version>3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mycore</groupId>
+      <artifactId>oaipmh-dataprovider-impl</artifactId>
+      <version>3.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.mycore.libmeta</groupId>
       <artifactId>libmeta-mets</artifactId>
       <version>0.8.1-SNAPSHOT</version>
