--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.datazuul.language</groupId>
+      <artifactId>iso-639</artifactId>
+      <version>1.1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>de.digitalcollections.cudami</groupId>
       <artifactId>dc-cudami-client</artifactId>
       <version>7.1.1</version>
@@ -256,6 +261,13 @@
   </distributionManagement>
 
   <repositories>
+    <repository>
+      <id>github</id>
+      <url>https://maven.pkg.github.com/datazuul/iso-639</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
     <repository>
       <id>ossrh-snapshots</id>
       <name>Sonatype Nexus Snapshots</name>
