--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,15 @@ iiif:
     #baseUrl: "http://localhost:23232/presentation/v2/"
     baseUrl: "https://api-dev.digitale-sammlungen.de/iiif/presentation/v2/"
 
+oai:
+  identify:
+    admin-email: "mdz@digitale-sammlungen.de"
+    base-url: "http://localhost:8080/oai/v2"
+    repository-identifier: "oai.digitale-sammlungen.de"
+    repository-name: "Digitale Sammlungen (MDZ)"
+    sample-id: "f611580a-1106-4c74-851f-9a6d12cb662c"
+    
+    
 management:
   endpoints:
     web:
