Add dublin core oai "oai_dc" first draft

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
     </dependency>
     <dependency>
       <groupId>org.mycore.libmeta</groupId>
+      <artifactId>libmeta-dublincore-oai</artifactId>
+      <version>0.8.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mycore.libmeta</groupId>
       <artifactId>libmeta-mets</artifactId>
       <version>0.8.1-SNAPSHOT</version>
     </dependency>
