--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>de.digitalcollections.cudami</groupId>
       <artifactId>dc-cudami-client</artifactId>
-      <version>7.0.0-SNAPSHOT</version>
+      <version>7.1.1</version>
     </dependency>
     <dependency>
       <groupId>io.micrometer</groupId>
@@ -61,12 +61,14 @@
       <artifactId>libmeta-mods</artifactId>
       <version>0.8.1-SNAPSHOT</version>
     </dependency>
+    <!--
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
       <scope>runtime</scope>
       <optional>true</optional>
     </dependency>
+    -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
