--- a/service/pom.xml
+++ b/service/pom.xml
@@ -20,7 +20,7 @@
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <timestamp>${maven.build.timestamp}</timestamp>
-    <versionName>${project.parent.version} manually built by ${user.name} at ${maven.build.timestamp}</versionName>
+    <versionName>${parent.version} manually built by ${user.name} at ${maven.build.timestamp}</versionName>
   </properties>
 
   <dependencies>
@@ -36,7 +36,6 @@
     <dependency>
       <groupId>de.digitalcollections.cudami.external</groupId>
       <artifactId>api</artifactId>
-      <version>${project.parent.version}</version>
     </dependency>
     <dependency>
       <groupId>io.micrometer</groupId>
@@ -199,6 +198,13 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>3.1.0</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <configuration>
+          <arguments>-Dmaven.javadoc.skip=true</arguments>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
