--- a/service/pom.xml
+++ b/service/pom.xml
@@ -41,7 +41,6 @@
       <groupId>io.micrometer</groupId>
       <artifactId>micrometer-registry-prometheus</artifactId>
       <scope>runtime</scope>
-      <version>1.11.4</version>
     </dependency>
     <dependency>
       <groupId>io.swagger.core.v3</groupId>
@@ -78,6 +77,10 @@
     <dependency>
       <groupId>org.mycore.libmeta</groupId>
       <artifactId>libmeta-mods</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-loader</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -198,13 +201,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>3.1.0</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <configuration>
-          <arguments>-Dmaven.javadoc.skip=true</arguments>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
